Wire up controls component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,4 @@
 @import "base/variables"; // leaving off file extension and _
 @import "components/navigation";
 @import "components/clock";
+@import "components/controls";
